--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,15 +1,17 @@
 name: CD - Deploy to Server via SSH
 
 on:
-  push:
-    branches:
-      - main  # ✅ 오직 main 브랜치 push만 트리거
-  workflow_dispatch:
+  workflow_dispatch:  # ✅ 수동 실행 지원
+  workflow_run:
+    workflows: ["CI - Upload Compose & Traefik Files"]  # CI 워크플로우 이름
+    types:
+      - completed
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    environment: production  # ✅ production 환경 secrets와 연결
+    environment: production
 
     steps:
       - name: Checkout repository
