--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,16 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@
+
+      - name:
+          디버깅: 파일 존재 여부 확인
+        run: |
+          echo "Current directory:"
+          pwd
+          echo "File list:"
+          ls -al
+          ls -al traefik
 
       - name: Upload Traefik and Compose files to Server
         uses: appleboy/scp-action@v0.1.4
