--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,11 +17,13 @@ jobs:
           fetch-depth: 0
           lfs: true
 
-      - name: 현재 파일 목록 확인
+      - name: 디버깅 - source 파일 실제 존재 여부 확인
         run: |
-          pwd
-          ls -al
-          ls -al traefik || echo "traefik 없음"
+          echo "[INFO] 현재 경로: $(pwd)"
+          echo "[INFO] docker-compose.*.yml 파일 확인"
+          ls -l docker-compose.*.yml || echo "❌ 파일 없음"
+          echo "[INFO] traefik 디렉토리 내 파일"
+          ls -l traefik || echo "❌ traefik 폴더 없음"
 
       - name: Upload Traefik and Compose files to Server
         uses: appleboy/scp-action@v0.1.4
