--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,15 +25,28 @@ jobs:
           echo "[INFO] traefik 디렉토리 내 파일"
           ls -l traefik || echo "❌ traefik 폴더 없음"
 
-      - name: Upload Traefik and Compose files to Server
-        uses: appleboy/scp-action@v0.1.4
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_PEM_KEY }}
-          source: |
-            docker-compose.backend.yml
-            docker-compose.portainer.yml
-            docker-compose.traefik.yml
+      - name: Archive deployment files
+        run: |
+          tar -czvf deploy_bundle.tar.gz \
+            docker-compose.backend.yml \
+            docker-compose.portainer.yml \
+            docker-compose.traefik.yml \
             traefik
-          target: /home/ubuntu/app
+
+      - name: Create SSH private key file
+        run: |
+          echo "${{ secrets.SERVER_PEM_KEY }}" > private_key.pem
+          chmod 600 private_key.pem
+
+      - name: Upload archive via scp
+        run: |
+          scp -i private_key.pem -o StrictHostKeyChecking=no \
+            deploy_bundle.tar.gz ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/home/ubuntu/app/
+
+      - name: Extract bundle on server and clean up
+        run: |
+          ssh -i private_key.pem -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+            cd /home/ubuntu/app
+            tar -xzvf deploy_bundle.tar.gz
+            rm deploy_bundle.tar.gz
+          EOF
