--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,12 +25,11 @@ jobs:
           echo "[INFO] traefik 디렉토리 내 파일"
           ls -l traefik || echo "❌ traefik 폴더 없음"
 
-      - name: Upload Traefik and Compose files to Server
+      - name: Upload files to server
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_PEM_KEY }}
-          with:
-            source: "docker-compose.backend.yml, docker-compose.portainer.yml, docker-compose.traefik.yml, traefik"
+          source: "docker-compose.backend.yml docker-compose.portainer.yml docker-compose.traefik.yml traefik"
           target: /home/ubuntu/app
