--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
+          key: ${{ secrets.SERVER_PEM_KEY }}
           script: |
             export SECRET_KEY="${{ secrets.SECRET_KEY }}"
             export MYSQL_USER="${{ secrets.MYSQL_USER }}"
