--- a/docker-compose.portainer.yml
+++ b/docker-compose.portainer.yml
@@ -14,6 +14,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
     networks:
+      - web
       - app-network
     labels:
       - "traefik.enable=true"
@@ -27,5 +28,8 @@ volumes:
   portainer_data:
 
 networks:
+  web:
+    external: true
+
   app-network:
     external: true
