--- a/traefik/dynamic_conf.yml
+++ b/traefik/dynamic_conf.yml
@@ -19,6 +19,10 @@ http:
           - url: "http://backend:8000"
 
   middlewares:
+    auth:
+      basicAuth:
+        users:
+          - "${TRAEFIK_DASHBOARD_AUTH}"
     # 대시보드 인증 미들웨어 정의 (실제 사용은 Traefik API 라우터 설정에서 필요 시 적용)
     dashboard-auth:
       basicAuth:
