--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -19,6 +19,9 @@ services:
     container_name: backend
     environment:
       - DJANGO_SETTINGS_MODULE=backend.settings.prod
+      - MYSQL_DATABASE=${MYSQL_DATABASE}
+      - MYSQL_USER=${MYSQL_USER}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
     command: >
       bash -c "python wait_mysql.py &&
       python manage.py migrate &&
