--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -34,7 +34,7 @@ services:
     command: >
       bash -c "python wait_mysql.py &&
       python manage.py migrate &&
-      exec gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers=4 --threads=2"
+      exec gunicorn backend.wsgi:application --bind 0.0.0.0:8000 --workers=4 --threads=2"
     depends_on:
       - mysqldb
 #    labels:
