--- a/docker-compose.portainer.yml
+++ b/docker-compose.portainer.yml
@@ -24,6 +24,20 @@ services:
       - "traefik.http.services.portainer.loadbalancer.server.port=9000"
       - "traefik.http.routers.portainer.middlewares=auth@file"
 
+  agent:
+    image: portainer/agent:latest
+    container_name: portainer_agent
+    environment:
+      - AGENT_CLUSTER_ADDR=tasks.agent
+      - DOCKER_HOST=unix:///var/run/docker.sock
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /var/lib/docker/volumes:/var/lib/docker/volumes
+    networks:
+      - web
+      - app-network
+    restart: always
+
 volumes:
   portainer_data:
 
