--- a/traefik/dynamic_conf.yml
+++ b/traefik/dynamic_conf.yml
@@ -47,6 +47,11 @@ http:
         accessControlAllowCredentials: true
         addVaryHeader: true
 
+    rate-limit:
+      rateLimit:
+        average: 50
+        burst: 100
+
     auth:
       basicAuth:
         users:
